objects/Case_Checklist__c.object
<CustomObject>
    <description>RN - CloudSmiths - Checklist record saved by an agent against a specific case. VF page renders checklist questions dynamically from the case checklist template record for a specific business area. Updates are saved as metadata to this record and rendered by a VF page</description>
    <fields>
        <fullName>ChecklistFormName__c</fullName>
        <formula>ChecklistTemplate__r.ChecklistName__c</formula>
        <label>Checklist Form Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChecklistTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RN - CloudSmiths</description>
        <label>Checklist Template</label>
        <referenceTo>Case_Checklist_Template__c</referenceTo>
        <relationshipLabel>Case Checklists</relationshipLabel>
        <relationshipName>Case_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateSubmitted__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateValidated__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Date Validated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RN - CloudSmiths</description>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Checklists</relationshipLabel>
        <relationshipName>Case_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SavedResults__c</fullName>
        <description>RN - CloudSmiths - The checklist saved results as metadata. This will be rendered by a VF page when a user wants to view the saved results</description>
        <label>Saved Results</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RN - CloudSmiths</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RN - CloudSmiths</description>
        <label>Validate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RN - CloudSmiths</description>
        <label>Validated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Checklist</label>
    <nameField>
        <displayFormat>CHK-{000000000}</displayFormat>
        <label>Case Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>